made big changes to authentication, now only via client
