# routes/api/v1/api.php
@@ -7,15 +7,9 @@ use App\Http\Controllers\Api\V1\AuthController;
 
 // Registering, Logging In/Logging Out Routes
 
-Route::middleware(['throttle:60,1'])->group(function () {
+Route::middleware(['throttle:60,1', 'auth:sanctum', 'ability:client:only'])->group(function () {
     Route::post('/login', [AuthController::class, 'login']);
     Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::post('/token/refresh', [AuthController::class, 'refreshToken']);
 });
-Route::middleware('auth:sanctum', 'ability:user:only,admin:only')->post('/logout', [AuthController::class, 'logout']);
-Route::middleware('auth:sanctum', 'ability:user:only,admin:only')->post('/token/refresh', [AuthController::class, 'refreshToken']);
-
-// User Routes
-
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum', 'ability:client:only,admin:only');
